<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="30dp">

    <TextView
        android:id="@+id/headerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_an_account"
        android:layout_marginTop="40dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/subTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect_with_your_friends_today"
        android:layout_below="@id/headerTitle"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/etUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/subTitle"
        android:autofillHints="username"
        android:hint="@string/enter_your_username"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textColorHint="@color/grey"
        android:background="@drawable/edit_text_style"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etUser"
        android:autofillHints="emailAddress"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/grey"
        android:background="@drawable/edit_text_style"/>

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etEmail"
        android:autofillHints="phone"
        android:hint="@string/enter_your_phone"
        android:inputType="phone"
        android:singleLine="true"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/grey"
        android:background="@drawable/edit_text_style"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPhone"
        android:autofillHints="password"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/grey"
        android:background="@drawable/edit_text_style"
        android:drawableEnd="@drawable/eye_off"
        android:drawablePadding="5dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:layout_below="@id/etPassword"
        app:backgroundTint="#0D52BD"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_style"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/btnSignup"
        android:layout_marginTop="25dp"
        android:gravity="center">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choice"
            android:layout_marginHorizontal="10dp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/black"/>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFacebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_with_facebook"
        android:layout_below="@id/btnSignup"
        app:backgroundTint="@color/skyBlue"
        android:layout_marginTop="60dp"
        android:background="@drawable/button_style"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_with_google"
        android:layout_below="@id/btnFacebook"
        android:layout_marginTop="15dp"
        android:textColor="@color/grey"
        app:backgroundTint="@color/white"
        app:strokeColor="@color/grey"
        app:strokeWidth="1dp"
        app:cornerRadius="5dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/btnGoogle"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"/>

        <TextView
            android:id="@+id/txtSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:paddingStart="5dp"
            android:textColor="@color/skyBlue"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

</RelativeLayout>